DopeSheet GreasePencil Mode Window won't scroll up #31476

Closed
opened 2012-05-15 23:01:43 +02:00 by Lyle Walsh · 6 comments

%%%Minor bug, 2.63a (not new)

If you have a rig with lots of bones keyed and you scroll down in the dope sheet window - action editor mode, then you switch to Grease Pencil mode, you can't get to your grease pencil keys because scroll up doesn't work, i.e. the dopesheet window is stuck in the last vertical position it was in when switching from action editor view. You can't move the scroll select on the R side of the window.

To get around this you can either hit Home key or go back to action editor view and scroll to top of that window and then switch modes.

In case the file is too big to upload, here is a link example:
https://docs.google.com/open?id=0B5_Z2GiKjL5IOHFvQ0lneDNmZVE%%%

%%%Minor bug, 2.63a (not new) If you have a rig with lots of bones keyed and you scroll down in the dope sheet window - action editor mode, then you switch to Grease Pencil mode, you can't get to your grease pencil keys because scroll up doesn't work, i.e. the dopesheet window is stuck in the last vertical position it was in when switching from action editor view. You can't move the scroll select on the R side of the window. To get around this you can either hit Home key or go back to action editor view and scroll to top of that window and then switch modes. In case the file is too big to upload, here is a link example: https://docs.google.com/open?id=0B5_Z2GiKjL5IOHFvQ0lneDNmZVE%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Tested the provided file in Blender 2.63a for Windows x64 and can not find the problem described. Grabbing the scroll bar, using the scroll wheel over the name-space, or using the scroll wheel while holding shift on the graph-space all scroll up in Grease Pencil mode. You can test this by scrolling to the bottom in action editor, switching to Grease Pencil and scroll up, then return to the action editor to check results.

It looks like nothing is happening due to the lack of visual feedback in this case. It is odd that the DopeSheet modes share the scroll location though, I can see where that becomes confusing.%%%

%%%Tested the provided file in Blender 2.63a for Windows x64 and can not find the problem described. Grabbing the scroll bar, using the scroll wheel over the name-space, or using the scroll wheel while holding shift on the graph-space all scroll up in Grease Pencil mode. You can test this by scrolling to the bottom in action editor, switching to Grease Pencil and scroll up, then return to the action editor to check results. It looks like nothing is happening due to the lack of visual feedback in this case. It is odd that the DopeSheet modes share the scroll location though, I can see where that becomes confusing.%%%
Author

%%%The problem I was referring to is related to my habit of using the scroll bar at the right of the dope sheet window to scroll up. THAT scroll doesn't work, however, scrolling in the left panel works fine as you pointed out.%%%

%%%The problem I was referring to is related to my habit of using the scroll bar at the right of the dope sheet window to scroll up. THAT scroll doesn't work, however, scrolling in the left panel works fine as you pointed out.%%%

%%%I just re-tested it using your provided .blend again. Using that scroll, grab and pull to the top of your screen 4-5 times, and you will find that it is in fact scrolling up.

It's working, it's just not working as you are expecting it to. That changes the nature of the problem, I suspect, to a feature request.%%%

%%%I just re-tested it using your provided .blend again. Using that scroll, grab and pull to the top of your screen 4-5 times, and you will find that it is in fact scrolling up. It's working, it's just not working as you are expecting it to. That changes the nature of the problem, I suspect, to a feature request.%%%

%%%fixed r50938.%%%

%%%fixed r50938.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31476
No description provided.