fix [#31476] DopeSheet GreasePencil Mode Window won't scroll up